--- a/src/places/components/PlaceItem.css
+++ b/src/places/components/PlaceItem.css
@@ -48,6 +48,12 @@ text-align: right;
 margin: 0.5rem;
 }
 
+.map-container
+{
+    height : 10rem;
+    width: 100%
+}
+
 @media (min-width: 768px) {
 .place-item__image {
     height: 20rem;
